# alias-gen

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  aliaser.py  arg_parser.py  bump_version.py  constants.py  file_utils.py  logger.py  pyproject.toml  requirements.txt  setup.py
src/alias_gen/: aliaser.py  arg_parser.py  constants.py  file_utils.py  logger.py  tui.py
tests/: README-DEV.md  test_aliaser.py  test_arg_parser.py  test_tui.py
